fix pricing spacing

--- a/css/main.css
+++ b/css/main.css
@@ -99,4 +99,15 @@ body h2 {
   margin: 20px 20px 50px;
 }
 
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+#pricing .pricing-column {
+  padding: 3% 2%;
+}
+#pricing .card-item {
+  padding: 0.25rem;
+}
+
 /*# sourceMappingURL=main.css.map */
